# detutils

./: .gitignore  .gitmodules  Makefile.am  README.md  bootstrap.conf  configure.ac
.github/workflows/: ci.yml
build-aux/: .gitignore  install-buildreqs  install-reqs
m4/: .gitignore  det.m4  detutils.m4
scripts/: .gitignore  Makefile.am  dl-git.in  get-autotools.in  get-gnu-tool.in  mini.in  nixify.in  script-functions.in  weather.in
src/: .gitignore  Makefile.am  dl-gnu-tool.in  gen-pass.in  makecscope.in  mini.in  pattmv.in  space2hyphen.in  upper2lower.in  ycm-conan-init.in
